--- a/tabsshouldrest.css
+++ b/tabsshouldrest.css
@@ -28,6 +28,14 @@ body {
 	margin-top: 10px;
 }
 
+.group-amount {
+	font-size: 2em;
+}
+
+.group-date {
+	opacity: 0.7;
+}
+
 ul {
 	margin-left: 2em;
 }
@@ -39,8 +47,8 @@ li {
 .delete-link {
 	font-size: .9em;
 	font-weight: bold;
-	color: white;
 	background: #eee;
+	color: white;
 
 	display: inline-block;
 	border-radius: 1em;
