Changes to interface, v0.3.0 now

--- a/tabsshouldrest.css
+++ b/tabsshouldrest.css
@@ -24,8 +24,11 @@ body {
 	padding-left: 10px;
 }
 
-.group {
+.group:first-of-type {
 	margin-top: 10px;
+}
+.group {
+	margin-top: 20px;
 }
 
 .group-amount {
