--- a/tabulator.css
+++ b/tabulator.css
@@ -1,19 +1,3 @@
-/**/
-/* GENERAL STYLES */
-/**/
-
-body {
-	background: #fefefe;
-	color: #333;
-	font-size: 16px;
-	line-height: 1.4;
-}
-
-#container {
-	margin: 3%;
-	padding: 5px;
-	font-family: Liberation Sans, sans-serif;
-}
 
 /**/
 /* GROUPS RELATED STYLES */
@@ -21,7 +5,10 @@ body {
 
 #groups {
 	margin: 10px 0;
-	padding-left: 10px;
+}
+
+.group-title {
+	margin-bottom: .5em;
 }
 
 .group:first-of-type {
@@ -31,36 +18,38 @@ body {
 	margin-top: 20px;
 }
 
-.group-amount {
-	font-size: 2em;
+.group-date {
+	font-size: 1.6em;
 }
 
-.group-date {
+.group-amount {
 	opacity: 0.7;
 }
 
 .restore-all {
-	margin-left: 5px;
-	cursor: pointer;
-}
-.restore-all:hover {
-	color: blue;
-	text-decoration: underline;
 }
 
+
 ul {
-	margin-left: 2em;
+	margin-left: 1em;
 }
 
 li {
 	list-style-type: none;
 }
 
+ul.tab-groups li {
+	line-height: 1.66em;
+}
+ul.tab-groups img {
+	vertical-align: text-bottom;
+}
+
 .delete-link {
 	font-size: .9em;
 	font-weight: bold;
-	background: #eee;
-	color: white;
+	color: #666;
+	opacity: 0;
 
 	display: inline-block;
 	border-radius: 1em;
@@ -68,43 +57,22 @@ li {
 	margin-right: 10px;
 }
 .delete-link:before {
-	content: "X";
+	content: "×";
 }
 *:hover > .delete-link {
-	background: #aaa;
+	opacity: .5;
 }
 .delete-link:hover {
-	background: red;
+	opacity: 1;
 	cursor: pointer;
 }
 
 .link, .link:visited {
-	color: blue;
+	color: #2196f3;
 	text-decoration: none;
 	padding: .2em;
 }
 .link:hover {
 	cursor: pointer;
 	text-decoration: underline;
-}
-
-/**/
-/* HEADER STYLES */
-/**/
-
-h1 {
-	font-size: 3em;
-}
-
-header {
-	border-bottom: 1px solid #f6f6f6;
-}
-
-/**/
-/* FOOTER STYLES */
-/**/
-
-footer {
-	border-top: 1px solid #f6f6f6;
-	padding: 5px 0;
 }
