--- a/base.css
+++ b/base.css
@@ -26,6 +26,12 @@ a {
 	border-bottom: 1px solid #2196f321;
 	border-radius: 5px;
 	cursor: pointer;
+	outline: none;
+}
+.button:active {
+	border-top: 1px solid white;
+	border-bottom: 0;
+	vertical-align: -1px;
 }
 .button:hover {
 	opacity: .9;
