--- a/base.css
+++ b/base.css
@@ -45,6 +45,19 @@ a {
 	padding: 0.3em 0.8em;
 }
 
+.alert {
+	width: 300px;
+	margin-top: 15px;
+	padding: .3em .6em;
+	text-align: center;
+	border-radius: 5px;
+}
+.alert-success {
+	color: #8BC34A;
+	background: #8bc34a1f;
+}
+
+
 /**/
 /* HEADER STYLES */
 /**/
