Run pretty-quick on the files

--- a/tabulator.css
+++ b/tabulator.css
@@ -3,85 +3,85 @@
 /**/
 
 #groups {
-	margin: 10px 0;
+  margin: 10px 0;
 }
 
 .group-title {
-	position: relative;
-	margin-bottom: .5em;
+  position: relative;
+  margin-bottom: 0.5em;
 
-	opacity: .5;
+  opacity: 0.5;
 }
 .group:hover .group-title {
-	opacity: 1;
+  opacity: 1;
 }
 
 .group:first-of-type {
-	margin-top: 10px;
+  margin-top: 10px;
 }
 .group {
-	margin-top: 20px;
+  margin-top: 20px;
 }
 
 .group-date {
-	font-size: 1.6em;
+  font-size: 1.6em;
 }
 
 .group-amount {
-	opacity: 0.7;
+  opacity: 0.7;
 }
 
 .restore-all {
 }
 
-
 ul {
 }
 
 li {
-	list-style-type: none;
+  list-style-type: none;
 }
 
 ul.tab-groups li {
-	line-height: 1.66em;
+  line-height: 1.66em;
 }
 ul.tab-groups img {
-	vertical-align: text-bottom;
+  vertical-align: text-bottom;
 }
 
 .delete-link {
-	font-size: .9em;
-	font-weight: bold;
-	color: #666;
-	opacity: 0;
+  font-size: 0.9em;
+  font-weight: bold;
+  color: #666;
+  opacity: 0;
 
-	display: inline-block;
-	border-radius: 1em;
-	padding: 0 .3em;
-	margin-right: 10px;
+  display: inline-block;
+  border-radius: 1em;
+  padding: 0 0.3em;
+  margin-right: 10px;
 }
 .group-title .delete-link {
-	position: absolute;
-	left: -1.5em;
-	top: .5em;
+  position: absolute;
+  left: -1.5em;
+  top: 0.5em;
 }
 .delete-link:before {
-	content: "×";
+  content: '×';
 }
 *:hover > .delete-link {
-	opacity: .5;
+  opacity: 0.5;
 }
 .delete-link:hover {
-	opacity: 1;
-	cursor: pointer;
+  opacity: 1;
+  cursor: pointer;
 }
 
-.link, .link:visited {
-	color: #2196f3;
-	text-decoration: none;
-	padding: .2em;
+.link,
+.link:visited {
+  color: #2196f3;
+  text-decoration: none;
+  padding: 0.2em;
 }
 .link:hover {
-	cursor: pointer;
-	text-decoration: underline;
+  cursor: pointer;
+  text-decoration: underline;
 }
