--- a/popup.css
+++ b/popup.css
@@ -1,20 +1,20 @@
 #container {
-	width: 200px;
+  width: 200px;
 }
 
 .menu-entry {
-	text-align: center;
-	background: #fefefe;
-	padding: 10px;
+  text-align: center;
+  background: #fefefe;
+  padding: 10px;
 }
 
 .menu-entry:hover {
-	cursor: pointer;
-	background: #f0f0f0;
+  cursor: pointer;
+  background: #f0f0f0;
 }
 
 #open-background-page {
-	border-top: 1px solid #eee;
+  border-top: 1px solid #eee;
 }
 
 /**/
@@ -22,31 +22,31 @@
 /**/
 
 .grid-container {
-	width: 100%;
+  width: 100%;
 }
 
 .grid-container * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* clearfix hack */
 .row:before,
 .row:after {
-	content: "";
-	display: table ;
-	clear: both;
+  content: '';
+  display: table;
+  clear: both;
 }
 
 [class*='col-'] {
-	float: left;
-	min-height: 1px;
-	border-right: 1px solid #eee;
+  float: left;
+  min-height: 1px;
+  border-right: 1px solid #eee;
 }
 
 [class*='col-']:last-of-type {
-	border-right: 0;
+  border-right: 0;
 }
 
 .col-1-2 {
-	width: 50%;
+  width: 50%;
 }
